--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 <body>
   <a class="skip-link" href="#main">Lewati ke konten utama</a>
 
-    <!-- INTRO / LANDING PAGE -->
   <section class="intro" id="intro">
     <div class="intro-content">
       <h1>Hai, I'm Qlio</h1>
@@ -18,7 +17,6 @@
     </div>
   </section>
 
-  <!-- ====== NAVBAR ====== -->
   <header class="site-header" role="banner">
     <div class="container nav" aria-label="Bar navigasi">
       <a class="brand" href="#top" aria-label="Beranda">
@@ -32,23 +30,14 @@
         <a href="#projects">Proyek</a>
         <a href="#contact">Kontak</a>
       </nav>
-      <button id="hamburger" class="hamburger" aria-controls="mobileMenu" aria-expanded="false" aria-label="Buka menu">☰</button>
     </div>
-    <nav id="mobileMenu" class="mobile-menu container" hidden>
-      <a href="#about">Tentang</a>
-      <a href="#edu">Riwayat</a>
-      <a href="#skills">Skills</a>
-      <a href="#projects">Proyek</a>
-      <a href="#contact">Kontak</a>
-    </nav>
   </header>
 
   <main id="main" tabindex="-1">
-    <!-- ====== HERO / ABOUT ====== -->
     <section id="about" class="hero container">
       <div class="hero-grid">
         <div>
-          <span class="tag">Mahasiswa • D3 Teknik Informatika • Polban</span>
+        <span class="tag">Mahasiswa • D3 Teknik Informatika • Polban</span>
           <h1>QLIO AMANDA FEBRIANY</h1>
           <p class="lead">Saya mahasiswa D3 Teknik Informatika POLBAN angkatan 2024, lulusan SMAN 7 Bandung. Aktif berorganisasi sejak SMP, terutama di pramuka, OSIS dan saat ini menjabat sebagai staf muda Keilmuan dan Keprofesian di himpunan.</p>
           <div class="actions" style="margin-top: .75rem;">
@@ -57,12 +46,11 @@
           </div>
         </div>
         <div style="justify-self:center;">
-          <img class="avatar" src="image/qlio.jpg" alt="Foto profil Manda (placeholder)" />
+          <img class="avatar" src="image/qlio.jpg" alt="Foto profil Manda" />
         </div>
       </div>
     </section>
-    
-    <!-- ====== RIWAYAT PENDIDIKAN & PENGALAMAN ====== -->
+
     <section id="edu" class="container">
       <h2>Riwayat Pendidikan & Pengalaman</h2>
       <div class="cards">
@@ -111,7 +99,6 @@
       </div>
     </section>
 
-    <!-- ====== SKILLS ====== -->
     <section id="skills" class="container">
       <h2>Daftar Keterampilan</h2>
       <div class="cards">
@@ -143,18 +130,17 @@
       </div>
     </section>
 
-    <!-- ====== PROYEK / PORTOFOLIO ====== -->
     <section id="projects" class="container">
       <h2>Proyek & Portofolio</h2>
       <div class="project-grid">
         <article class="card project-card">
-        <div class="project-thumb">
+          <div class="project-thumb">
             <img src="image/flappy.jpg" alt="Flappy Bird (C + Raylib)">
-        </div>
+          </div>
           <h3>Flappy Bird</h3>
           <p>Game sederhana menggunakan C dan Raylib: skor, highscore, efek suara, serta penyimpanan ke file. (Sedang pengembangan)</p>
           <div class="actions">
-            <a class="btn" href="https://github.com/zahraldila/C2-FlappyBird.git" target="_blank" rel="noopener noreferrer"">Repo GitHub</a>
+            <a class="btn" href="https://github.com/zahraldila/C2-FlappyBird.git" target="_blank" rel="noopener noreferrer">Repo GitHub</a>
           </div>
         </article>
         <article class="card">
@@ -168,14 +154,14 @@
             </div>
             <div class="t-item">
               <div class="t-meta">[09-10 Februari 2023]</div>
-              <strong> Pramuka SMAN 7 Bandung</strong> – Siaga Bencana
+              <strong>Pramuka SMAN 7 Bandung</strong> – Siaga Bencana
               <div class="t-meta">Mengkoordinasikan anggota Pramuka dalam program simulasi dan edukasi kesiapsiagaan bencana untuk warga sekolah bersama BPBD.</div>
             </div>
+          </div>
         </article>
       </div>
     </section>
 
-    <!-- ====== MEDIA TAMBAHAN (OPSIONAL) ====== -->
     <section class="container" aria-labelledby="media-heading">
       <h2 id="media-heading">Media Tambahan</h2>
       <div class="cards">
@@ -195,7 +181,6 @@
       </div>
     </section>
 
-    <!-- ====== KONTAK ====== -->
     <section id="contact" class="container">
       <h2>Kontak</h2>
       <div class="cards">
@@ -203,8 +188,8 @@
           <ul>
             <li>Email: <a href="mailto:qlioamanda@gmail.com">qlioamanda@gmail.com</a></li>
             <li>GitHub: <a href="https://github.com/QlioAmanda" target="_blank" rel="noopener">github.com/mandaqx</a></li>
-            <li>LinkedIn: <a href="#" target="_blank" rel="noopener">linkedin.com/in/Qlio Amanda F</a></li>
-            <li>Instagram: <a href="#" target="_blank" rel="noopener">@mandaqx_</a></li>
+            <li>LinkedIn: <a href="https://www.linkedin.com/in/qlio-amanda-f-01304a380" target="_blank" rel="noopener">linkedin.com/in/Qlio Amanda F</a></li>
+            <li>Instagram: <a href="https://www.instagram.com/mandaqx_?igsh=OXRuMHNpZ29xcWph" target="_blank" rel="noopener">@mandaqx_</a></li>
           </ul>
         </article>
       </div>
@@ -212,31 +197,7 @@
   </main>
 
   <footer>
-    <div class="container">© <span id="year"></span> Qlio Amanda Febriany • Dibuat dengan HTML & CSS. Responsif, cepat, dan simple.</div>
+    <div class="container">© 2025 Qlio Amanda Febriany • Dibuat dengan HTML & CSS.</div>
   </footer>
-
-  <script>
-    document.getElementById('year').textContent = new Date().getFullYear();
-
-    const btn = document.getElementById('hamburger');
-    const menu = document.getElementById('mobileMenu');
-    btn.addEventListener('click', () => {
-      const open = btn.getAttribute('aria-expanded') === 'true';
-      btn.setAttribute('aria-expanded', String(!open));
-      if (menu.hasAttribute('hidden')) {
-        menu.removeAttribute('hidden');
-        menu.style.display = 'block';
-      } else {
-        menu.setAttribute('hidden', '');
-        menu.style.display = 'none';
-      }
-    });
-
-    menu.querySelectorAll('a').forEach(a => a.addEventListener('click', () => {
-      menu.setAttribute('hidden', '');
-      menu.style.display = 'none';
-      btn.setAttribute('aria-expanded', 'false');
-    }));
-  </script>
 </body>
 </html>
