penghapusan kalimat yang salah

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
             <img src="image/flappy.jpg" alt="Flappy Bird (C + Raylib)">
           </div>
           <h3>Flappy Bird</h3>
-          <p>Game sederhana menggunakan C dan Raylib: skor, highscore, efek suara, serta penyimpanan ke file. (Sedang pengembangan)</p>
+          <p>Game sederhana menggunakan C dan Raylib: skor, highscore, efek suara, serta penyimpanan ke file.</p>
           <div class="actions">
             <a class="btn" href="https://github.com/zahraldila/C2-FlappyBird.git" target="_blank" rel="noopener noreferrer">Repo GitHub</a>
           </div>
