--- a/index.html
+++ b/index.html
@@ -30,14 +30,23 @@
         <a href="#projects">Proyek</a>
         <a href="#contact">Kontak</a>
       </nav>
+      <label for="menu-toggle" class="hamburger" aria-controls="mobileMenu" aria-expanded="false" aria-label="Buka menu">☰</label>
     </div>
+    <input type="checkbox" id="menu-toggle" hidden>
+    <nav id="mobileMenu" class="mobile-menu container">
+      <a href="#about">Tentang</a>
+      <a href="#edu">Riwayat</a>
+      <a href="#skills">Skills</a>
+      <a href="#projects">Proyek</a>
+      <a href="#contact">Kontak</a>
+    </nav>
   </header>
 
   <main id="main" tabindex="-1">
     <section id="about" class="hero container">
       <div class="hero-grid">
         <div>
-        <span class="tag">Mahasiswa • D3 Teknik Informatika • Polban</span>
+          <span class="tag">Mahasiswa • D3 Teknik Informatika • Polban</span>
           <h1>QLIO AMANDA FEBRIANY</h1>
           <p class="lead">Saya mahasiswa D3 Teknik Informatika POLBAN angkatan 2024, lulusan SMAN 7 Bandung. Aktif berorganisasi sejak SMP, terutama di pramuka, OSIS dan saat ini menjabat sebagai staf muda Keilmuan dan Keprofesian di himpunan.</p>
           <div class="actions" style="margin-top: .75rem;">
@@ -91,7 +100,7 @@
             </div>
             <div class="t-item">
               <div class="t-meta">[2022 – 2023]</div>
-              <strong> OSIS & Ekstrakurikuler</strong> – Ketua Pramuka
+              <strong>OSIS & Ekstrakurikuler</strong> – Ketua Pramuka
               <div class="t-meta">Merancang kegiatan Pramuka dari ekstrakurikuler, OSIS, hingga satu sekolah, dengan koordinasi pembinaan.</div>
             </div>
           </div>
